# AIAgentThreatMapper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  srotie.txt  test_pipeline.py
examples/: sample_report.md
src/agent_threat_mapper/: __init__.py  cli.py
src/agent_threat_mapper/azure_export/: __init__.py  az_commands.py  exporter.py
src/agent_threat_mapper/models/: __init__.py  agent_intent.py  azure_resources.py  role_interpreter.py  threat_model.py
src/agent_threat_mapper/normalization/: __init__.py  context_parser.py  intent_parser.py
src/agent_threat_mapper/reporting/: __init__.py  formatter.py
src/agent_threat_mapper/reporting/templates/: report.md.j2
src/agent_threat_mapper/rules/: __init__.py  _common.py  base.py  engine.py  identity_rules.py  keyvault_rules.py  llm_rules.py  logging_rules.py  registry.py  storage_rules.py
src/agent_threat_mapper/threat_model/: __init__.py  builder.py
tests/azure_export/: test_exporter.py
tests/fixtures/: agent_context_sample.json  agent_role_sample.txt
tests/models/: test_role_interpreter.py
tests/normalization/: test_context_parser.py  test_intent_parser.py
tests/reporting/: test_formatter.py  test_report_render.py
tests/rules/: conftest.py  test_common.py  test_engine.py  test_identity_rules.py  test_keyvault_rules.py  test_llm_rules.py  test_logging_rules.py  test_storage_rules.py
tests/threat_model/: test_builder.py
